9 February 2007: Wouter
	- replay file reading.

8 February 2007: Wouter
	- added tcp test.
	- replay storage.
	- testcode/fake_event work.

7 February 2007: Wouter
	- return answer with the same ID as query was sent with.
	- created udp forwarder test. I've done some effort to make it perform
	  quickly. After servers are created, no big sleep statements but
	  it checks the logfiles to see if servers have come up. Takes 0.14s.
	- set addrlen value when calling recvfrom.
	- comparison of addrs more portable.
	- LIBEVENT option for testbed to set libevent directory.
	- work on tcp input.

6 February 2007: Wouter
	- reviewed code and improved in places.

5 February 2007: Wouter
	- Picked up stdc99 and other define tests from ldns. Improved
	  POSIX define test to include getaddrinfo.
	- defined constants for netevent callback error code.
	- unit test for strisip6.

2 February 2007: Wouter
	- Created udp4 and udp6 port arrays to provide service for both
	  address families.
	- uses IPV6_USE_MIN_MTU for udp6 ,IPV6_V6ONLY to make ip6 sockets.
	- listens on both ip4 and ip6 ports to provide correct return address.
	- worker fwder address filled correctly.
	- fixup timer code.
	- forwards udp queries and sends answer.

1 February 2007: Wouter
	- outside network more UDP work.
	- moved * closer to type.
	- comm_timer object and events.

31 January 2007: Wouter
	- Added makedist.sh script to make release tarball.
	- Removed listen callback layer, did not add anything.
	- Added UDP recv to netevent, worker callback for udp.
	- netevent communication reply storage structure.
	- minimal query header sanity checking for worker.
	- copied over rbtree implementation from NSD (BSD licensed too).
	- outgoing network query service work.

30 January 2007: Wouter
	- links in example/ldns-testpkts.c and .h for premade packet support.
	- added callback argument to listen_dnsport and daemon/worker.

29 January 2007: Wouter
	- unbound.8 a short manpage.

26 January 2007: Wouter